--- a/index.html
+++ b/index.html
@@ -8,22 +8,31 @@
 </head>
 
 
-<body style="background-color:dimgrey;">
-    <div class="collapsible-menu">
-        <input type="checkbox" id="menu">
-        <label for="menu">Menu</label>
-        <div class="menu-content">
-            <ul>
-                <li>
-                    <a href="index.html"></a>Início</li>
-                <li>
-                    <a href="pages/artigos.html"></a>Artigos</li>
-            </ul>
+<body class="bg">
+    <div class="grid-container">
+        <div class="cabecalho">
+            <img class="alinhar-imagem" src="imagens/hoi-base-game-logo.png" alt="">
         </div>
-    </div>
 
-    <div class="cabecalho">
-        <img class="alinhar-imagem" src="imagens/hoi-base-game-logo.png" alt="">
+        <div class="menu-lateral">
+            <a href="#" class="itens-menu">Menu</a>
+        </div>
+
+        <div class="box-content">
+            <div style="text-align:center;">
+                <h1>Qual a Nação Minor Mais Jogável?</h1>
+            </div>
+            <article>
+
+                <ul>Dentre as nações minor, certamente a mais jogável é a Suécia, pelos motivos:</ul>
+                <ul>-População considerável de ~400k de manpower nos primeiros anos.</ul>
+                <ul>-Quantidade considerável de estados para construções de Civil e Military Factories</ul>
+            </article>
+        </div>
+        <div class="box-content2">
+        </div>
+        <div class="box-content3">
+        </div>
     </div>
 
 
